[tool.poetry]
name = "cloud-run-exec"
version = "0.1.0"
description = "Cloud Run shell exec python with streamlit"
authors = ["Nuttee Jirattivongvibul <nuttee@google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
